# Task-Tracker-CLI

./: README.md  main.py  pyproject.toml  taskCLI.py  test_CLI.py  todo.py
task_cli/: mainCLI.py  taskCLI.py
test/: test_CLI.py
