[project]
name = "task-cli"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tabulate>=0.9.0"]

[project.scripts]
task-cli = "mainCLI:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["task-cli"]

[tool.ruff]
line-length = 120
select = ["I"]
fix = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=8.3.2"]